--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=Lunch-reservation
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:PSAhnCe9/2Roi2Jq1IPHzZN/EXAOQfdr49j5CBIml3A=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -8,10 +8,10 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
+DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=laravel-lunch
 DB_USERNAME=root
 DB_PASSWORD=
 
