--- a/.env
+++ b/.env
@@ -1,18 +1,18 @@
-APP_NAME=Lunch-reservation
+APP_NAME=laravel-lunch
 APP_ENV=local
 APP_KEY=base64:PSAhnCe9/2Roi2Jq1IPHzZN/EXAOQfdr49j5CBIml3A=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://git.heroku.com/laravel-lunch.git
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_CONNECTION=pgsql
+DB_HOST=ec2-44-213-151-75.compute-1.amazonaws.com
 DB_PORT=3306
-DB_DATABASE=laravel-lunch
-DB_USERNAME=root
+DB_DATABASE=d39duvrb44vu68
+DB_USERNAME=jacmsmwjxzmymb
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
