--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "devDependencies": {
-    "tailwindcss": "^3.3.1"
+    "laravel-vite-plugin": "^0.7.7",
+    "tailwindcss": "^3.3.1",
+    "vite": "^4.3.8"
   }
 }
