--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 APP_NAME=laravel-lunch
-APP_ENV=local
+APP_ENV=production
 APP_KEY=base64:PSAhnCe9/2Roi2Jq1IPHzZN/EXAOQfdr49j5CBIml3A=
 APP_DEBUG=true
 APP_URL=https://git.heroku.com/laravel-lunch.git
