--- a/package.json
+++ b/package.json
@@ -1,4 +1,13 @@
 {
+    "scripts": {
+        "dev": "npm run development",
+        "development": "mix",
+        "watch": "mix watch",
+        "watch-poll": "mix watch -- --watch-options-poll=1000",
+        "hot": "mix watch --hot",
+        "prod": "npm run production",
+        "production": "mix --production"
+  },
   "devDependencies": {
     "tailwindcss": "^3.3.1"
   }
