--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+    "private": true,
     "scripts": {
         "dev": "npm run development",
         "development": "mix",
@@ -7,8 +8,8 @@
         "hot": "mix watch --hot",
         "prod": "npm run production",
         "production": "mix --production"
-  },
-  "devDependencies": {
-    "tailwindcss": "^3.3.1"
-  }
+    },
+    "devDependencies": {
+        "tailwindcss": "^3.3.1"
+    }
 }
