--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "devDependencies": {
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.5",
-        "vite": "^4.0.0",
-        "tailwindcss": "^3.3.1"
+        "tailwindcss": "^3.3.1",
+        "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "lodash": "^4.17.21"
     }
 }
